# embvm-project-skeleton

./: README.md  meson.build
docs/: 0001-record-architecture-decisions.md
src/: meson.build
src/app/: main.cpp  meson.build
src/drivers/: meson.build
tools/: CI.jenkinsfile  Jenkinsfile
